--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,18 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               Z...
+tagline:             'Never Grow Old'
+description:         ''
+url:                 http://xiongzh.com
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Zhen XIONG
+  url:               https://weibo.com/dreamcatcherpo
+  email:             837075787@qq.com
 
 # Custom vars
 version:             1.0.0
