--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:           pretty
 
 # Setup
 title:               Z
-tagline:             '...'
+tagline:             'Be the change you want to see in the world.'
 description:         'Be the change you want to see in the world.'
 url:                 http://xiongzh.com
 baseurl:             'http://xiongzh.com'
